force-app/main/default/objects/Onboarding__c/fields/Billing_ZIP__c.field-meta.xml
<CustomField>
    <fullName>Billing_ZIP__c</fullName>
    <label>Billing ZIP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>