force-app/main/default/objects/Onboarding__c/fields/bSatisfactionCallscheduled__c.field-meta.xml
<CustomField>
    <fullName>bSatisfactionCallscheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Satisfaction Call scheduled?</label>
    <type>Checkbox</type>
</CustomField>