force-app/main/default/objects/Onboarding__c/fields/Comment_Account_Management__c.field-meta.xml
<CustomField>
    <fullName>Comment_Account_Management__c</fullName>
    <description>In order for Account Managers to communicate with the Customer Success</description>
    <label>Comment Account Management</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>