force-app/main/default/objects/Onboarding__c/fields/Comments_Customer_Success_RichText__c.field-meta.xml
<CustomField>
    <fullName>Comments_Customer_Success_RichText__c</fullName>
    <description>RO-1458</description>
    <label>Comments Customer Success</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>