force-app/main/default/objects/Onboarding__c/fields/Onboarding_Medium__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Medium__c</fullName>
    <label>Onboarding Medium</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>in-person</fullName>
            </value>
            <value>
                <fullName>phonecall</fullName>
            </value>
            <value>
                <fullName>videocall</fullName>
            </value>
            <value>
                <fullName>email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>