force-app/main/default/objects/Onboarding__c/fields/txtComments__c.field-meta.xml
<CustomField>
    <fullName>txtComments__c</fullName>
    <label>Comments Hunter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>