force-app/main/default/objects/Onboarding__c/fields/txtCommentsCustomerSuccess__c.field-meta.xml
<CustomField>
    <fullName>txtCommentsCustomerSuccess__c</fullName>
    <label>Comments Customer Success - Legacy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>