force-app/main/default/objects/Onboarding__c/fields/txtReasonforNoCall__c.field-meta.xml
<CustomField>
    <fullName>txtReasonforNoCall__c</fullName>
    <label>Reason for No Call</label>
    <length>255</length>
    <type>Text</type>
</CustomField>