force-app/main/default/objects/Onboarding__c/validationRules/Missing_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Missing_Fields</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
($Profile.Name &lt;&gt; &apos;System Administrator&apos;),
OR(
 ISBLANK( Contact__c ),
 ISBLANK( Opportunity__c ),
 ISBLANK( txtComments__c )
)
)</errorConditionFormula>
    <errorMessage>Please fill out Opportunity, Contact and Comments</errorMessage>
</ValidationRule>