force-app/main/default/objects/Onboarding__c/validationRules/Onboarding_Medium.validationRule-meta.xml
<ValidationRule>
    <fullName>Onboarding_Medium</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
($Profile.Name &lt;&gt; &apos;System Administrator&apos;),
    NOT(ISBLANK(txtCommentsCustomerSuccess__c )),
    (ISPICKVAL(Onboarding_Medium__c,&quot;&quot;))
)</errorConditionFormula>
    <errorMessage>Please fill out Onboarding Medium!</errorMessage>
</ValidationRule>