force-app/main/default/objects/Onboarding__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>txtCommentsCustomerSuccess__c</columns>
    <columns>Onboarding_Medium__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>txtComments__c</columns>
    <columns>Comment_Account_Management__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>